Refactoring (hide file paths, allow for parameters to be passed)